--- a/mSprayApp/res/layout/confirm_ddt.xml
+++ b/mSprayApp/res/layout/confirm_ddt.xml
@@ -17,6 +17,174 @@
         android:text="@string/confirmDDT"
         android:textSize="28sp" />
 
+    <ScrollView
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_above="@+id/confirm_ddt_layout_innerLinearLayout"
+        android:layout_below="@+id/confirm_ddt_textview_title"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="16dp"
+        android:orientation="vertical"
+        android:scrollbars="none" >
+
+        <TableLayout
+            android:id="@+id/confirm_ddt_table"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content" >
+
+            <TableRow
+                android:id="@+id/confirm_ddt_foreman_row"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:background="@android:color/white"
+                android:paddingBottom="8dp"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
+                android:paddingTop="8dp" >
+
+                <TextView
+                    android:id="@+id/confirm_ddt_foreman_label"
+                    android:layout_width="0dp"
+                    android:layout_weight="0.5"
+                    android:text="@string/foreman"
+                    android:textSize="24sp" />
+
+                <View
+                    android:layout_height="0dp"
+                    android:layout_weight="0.1" />
+
+                <TextView
+                    android:id="@+id/confirm_ddt_foreman_value"
+                    android:layout_width="0dp"
+                    android:layout_weight="0.4"
+                    android:text="@string/emptyValue"
+                    android:textSize="24sp" />
+            </TableRow>
+
+            <TableRow
+                android:id="@+id/confirm_ddt_sprayer_row"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:background="@android:color/white"
+                android:paddingBottom="8dp"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
+                android:paddingTop="8dp" >
+
+                <TextView
+                    android:id="@+id/confirm_ddt_sprayer_label"
+                    android:layout_width="0dp"
+                    android:layout_weight="0.5"
+                    android:text="@string/sprayer"
+                    android:textSize="24sp" />
+
+                <View
+                    android:layout_height="0dp"
+                    android:layout_weight="0.1" />
+
+                <TextView
+                    android:id="@+id/confirm_ddt_sprayer_value"
+                    android:layout_width="0dp"
+                    android:layout_weight="0.4"
+                    android:text="@string/emptyValue"
+                    android:textSize="24sp" />
+            </TableRow>
+
+            <TableRow
+                android:id="@+id/confirm_ddt_rooms_sprayed_row"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:background="@android:color/white"
+                android:paddingBottom="8dp"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
+                android:paddingTop="8dp" >
+
+                <TextView
+                    android:id="@+id/confirm_ddt_rooms_sprayed_label"
+                    android:layout_width="0dp"
+                    android:layout_weight="0.5"
+                    android:text="@string/rooms"
+                    android:textSize="24sp" />
+
+                <View
+                    android:layout_height="0dp"
+                    android:layout_weight="0.1" />
+
+                <TextView
+                    android:id="@+id/confirm_ddt_rooms_sprayed_value"
+                    android:layout_width="0dp"
+                    android:layout_weight="0.4"
+                    android:text="@string/emptyValue"
+                    android:textSize="24sp" />
+            </TableRow>
+
+            <TableRow
+                android:id="@+id/confirm_ddt_shelters_sprayed_row"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:background="@android:color/white"
+                android:paddingBottom="8dp"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
+                android:paddingTop="8dp" >
+
+                <TextView
+                    android:id="@+id/confirm_ddt_shelters_sprayed_label"
+                    android:layout_width="0dp"
+                    android:layout_weight="0.5"
+                    android:text="@string/shelters"
+                    android:textSize="24sp" />
+
+                <View
+                    android:layout_height="0dp"
+                    android:layout_weight="0.1" />
+
+                <TextView
+                    android:id="@+id/confirm_ddt_shelters_sprayed_value"
+                    android:layout_width="0dp"
+                    android:layout_weight="0.4"
+                    android:text="@string/emptyValue"
+                    android:textSize="24sp" />
+            </TableRow>
+
+            <TableRow
+                android:id="@+id/confirm_ddt_can_refilled_row"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:background="@android:color/white"
+                android:paddingBottom="8dp"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
+                android:paddingTop="8dp" >
+
+                <TextView
+                    android:id="@+id/confirm_ddt_can_refilled_label"
+                    android:layout_width="0dp"
+                    android:layout_weight="0.5"
+                    android:text="@string/refillCan"
+                    android:textSize="24sp" />
+
+                <View
+                    android:layout_height="0dp"
+                    android:layout_weight="0.1" />
+
+                <TextView
+                    android:id="@+id/confirm_ddt_can_refilled_value"
+                    android:layout_width="0dp"
+                    android:layout_weight="0.4"
+                    android:text="@string/emptyValue"
+                    android:textSize="24sp" />
+            </TableRow>
+        </TableLayout>
+    </ScrollView>
+
     <LinearLayout
         android:id="@+id/confirm_ddt_layout_innerLinearLayout"
         android:layout_width="fill_parent"
@@ -47,166 +215,5 @@
             android:textColor="#fff"
             android:textSize="28sp" />
     </LinearLayout>
-
-    <TableLayout
-        android:id="@+id/confirm_ddt_table"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/confirm_ddt_textview_title"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="16dp" >
-
-        <TableRow
-            android:id="@+id/confirm_ddt_foreman_row"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:background="@android:color/white"
-            android:paddingBottom="8dp"
-            android:paddingLeft="16dp"
-            android:paddingRight="16dp"
-            android:paddingTop="8dp" >
-
-            <TextView
-                android:id="@+id/confirm_ddt_foreman_label"
-                android:layout_width="0dp"
-                android:layout_weight="0.5"
-                android:text="@string/foreman"
-                android:textSize="24sp" />
-
-            <View
-                android:layout_height="0dp"
-                android:layout_weight="0.1" />
-
-            <TextView
-                android:id="@+id/confirm_ddt_foreman_value"
-                android:layout_width="0dp"
-                android:layout_weight="0.4"
-                android:text="@string/emptyValue"
-                android:textSize="24sp" />
-
-        </TableRow>
-
-        <TableRow
-            android:id="@+id/confirm_ddt_sprayer_row"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:background="@android:color/white"
-            android:paddingBottom="8dp"
-            android:paddingLeft="16dp"
-            android:paddingRight="16dp"
-            android:paddingTop="8dp" >
-
-            <TextView
-                android:id="@+id/confirm_ddt_sprayer_label"
-                android:layout_width="0dp"
-                android:layout_weight="0.5"
-                android:text="@string/sprayer"
-                android:textSize="24sp" />
-
-            <View
-                android:layout_height="0dp"
-                android:layout_weight="0.1" />
-
-            <TextView
-                android:id="@+id/confirm_ddt_sprayer_value"
-                android:layout_width="0dp"
-                android:layout_weight="0.4"
-                android:text="@string/emptyValue"
-                android:textSize="24sp" />
-        </TableRow>
-
-        <TableRow
-            android:id="@+id/confirm_ddt_rooms_sprayed_row"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:background="@android:color/white"
-            android:paddingBottom="8dp"
-            android:paddingLeft="16dp"
-            android:paddingRight="16dp"
-            android:paddingTop="8dp" >
-
-            <TextView
-                android:id="@+id/confirm_ddt_rooms_sprayed_label"
-                android:layout_width="0dp"
-                android:layout_weight="0.5"
-                android:text="@string/rooms"
-                android:textSize="24sp" />
-
-            <View
-                android:layout_height="0dp"
-                android:layout_weight="0.1" />
-
-            <TextView
-                android:id="@+id/confirm_ddt_rooms_sprayed_value"
-                android:layout_width="0dp"
-                android:layout_weight="0.4"
-                android:text="@string/emptyValue"
-                android:textSize="24sp" />
-        </TableRow>
-
-        <TableRow
-            android:id="@+id/confirm_ddt_shelters_sprayed_row"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:background="@android:color/white"
-            android:paddingBottom="8dp"
-            android:paddingLeft="16dp"
-            android:paddingRight="16dp"
-            android:paddingTop="8dp" >
-
-            <TextView
-                android:id="@+id/confirm_ddt_shelters_sprayed_label"
-                android:layout_width="0dp"
-                android:layout_weight="0.5"
-                android:text="@string/shelters"
-                android:textSize="24sp" />
-
-            <View
-                android:layout_height="0dp"
-                android:layout_weight="0.1" />
-
-            <TextView
-                android:id="@+id/confirm_ddt_shelters_sprayed_value"
-                android:layout_width="0dp"
-                android:layout_weight="0.4"
-                android:text="@string/emptyValue"
-                android:textSize="24sp" />
-        </TableRow>
-
-        <TableRow
-            android:id="@+id/confirm_ddt_can_refilled_row"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:background="@android:color/white"
-            android:paddingBottom="8dp"
-            android:paddingLeft="16dp"
-            android:paddingRight="16dp"
-            android:paddingTop="8dp" >
-
-            <TextView
-                android:id="@+id/confirm_ddt_can_refilled_label"
-                android:layout_width="0dp"
-                android:layout_weight="0.5"
-                android:text="@string/refillCan"
-                android:textSize="24sp" />
-
-            <View
-                android:layout_height="0dp"
-                android:layout_weight="0.1" />
-
-            <TextView
-                android:id="@+id/confirm_ddt_can_refilled_value"
-                android:layout_width="0dp"
-                android:layout_weight="0.4"
-                android:text="@string/emptyValue"
-                android:textSize="24sp" />
-        </TableRow>
-    </TableLayout>
 
 </RelativeLayout>
