--- a/mSprayApp/res/layout/confirm_fendona.xml
+++ b/mSprayApp/res/layout/confirm_fendona.xml
@@ -17,165 +17,173 @@
         android:text="@string/confirmFendona"
         android:textSize="28sp" />
 
-    <TableLayout
-        android:id="@+id/confirm_fendona_table"
+    <ScrollView
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="fill_parent"
+        android:layout_above="@+id/confirm_fendona_layout_innerLinearLayout"
         android:layout_below="@+id/confirm_fendona_textview_title"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginTop="16dp" >
+        android:layout_marginTop="16dp"
+        android:orientation="vertical"
+        android:scrollbars="none" >
 
-        <TableRow
-            android:id="@+id/confirm_fendona_foreman_row"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:background="@android:color/white"
-            android:paddingBottom="8dp"
-            android:paddingLeft="16dp"
-            android:paddingRight="16dp"
-            android:paddingTop="8dp" >
+        <TableLayout
+            android:id="@+id/confirm_fendona_table"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content" >
 
-            <TextView
-                android:id="@+id/confirm_fendona_foreman_label"
-                android:layout_width="0dp"
-                android:layout_weight="0.5"
-                android:text="@string/foreman"
-                android:textSize="24sp" />
+            <TableRow
+                android:id="@+id/confirm_fendona_foreman_row"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:background="@android:color/white"
+                android:paddingBottom="8dp"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
+                android:paddingTop="8dp" >
 
-            <View
-                android:layout_height="0dp"
-                android:layout_weight="0.1" />
+                <TextView
+                    android:id="@+id/confirm_fendona_foreman_label"
+                    android:layout_width="0dp"
+                    android:layout_weight="0.5"
+                    android:text="@string/foreman"
+                    android:textSize="24sp" />
 
-            <TextView
-                android:id="@+id/confirm_fendona_foreman_value"
-                android:layout_width="0dp"
-                android:layout_weight="0.4"
-                android:text="@string/emptyValue"
-                android:textSize="24sp" />
-        </TableRow>
+                <View
+                    android:layout_height="0dp"
+                    android:layout_weight="0.1" />
 
-        <TableRow
-            android:id="@+id/confirm_fendona_sprayer_row"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:background="@android:color/white"
-            android:paddingBottom="8dp"
-            android:paddingLeft="16dp"
-            android:paddingRight="16dp"
-            android:paddingTop="8dp" >
+                <TextView
+                    android:id="@+id/confirm_fendona_foreman_value"
+                    android:layout_width="0dp"
+                    android:layout_weight="0.4"
+                    android:text="@string/emptyValue"
+                    android:textSize="24sp" />
+            </TableRow>
 
-            <TextView
-                android:id="@+id/confirm_fendona_sprayer_label"
-                android:layout_width="0dp"
-                android:layout_weight="0.5"
-                android:text="@string/sprayer"
-                android:textSize="24sp" />
+            <TableRow
+                android:id="@+id/confirm_fendona_sprayer_row"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:background="@android:color/white"
+                android:paddingBottom="8dp"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
+                android:paddingTop="8dp" >
 
-            <View
-                android:layout_height="0dp"
-                android:layout_weight="0.1" />
+                <TextView
+                    android:id="@+id/confirm_fendona_sprayer_label"
+                    android:layout_width="0dp"
+                    android:layout_weight="0.5"
+                    android:text="@string/sprayer"
+                    android:textSize="24sp" />
 
-            <TextView
-                android:id="@+id/confirm_fendona_sprayer_value"
-                android:layout_width="0dp"
-                android:layout_weight="0.4"
-                android:text="@string/emptyValue"
-                android:textSize="24sp" />
-        </TableRow>
+                <View
+                    android:layout_height="0dp"
+                    android:layout_weight="0.1" />
 
-        <TableRow
-            android:id="@+id/confirm_fendona_rooms_sprayed_row"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:background="@android:color/white"
-            android:paddingBottom="8dp"
-            android:paddingLeft="16dp"
-            android:paddingRight="16dp"
-            android:paddingTop="8dp" >
+                <TextView
+                    android:id="@+id/confirm_fendona_sprayer_value"
+                    android:layout_width="0dp"
+                    android:layout_weight="0.4"
+                    android:text="@string/emptyValue"
+                    android:textSize="24sp" />
+            </TableRow>
 
-            <TextView
-                android:id="@+id/confirm_fendona_rooms_sprayed_label"
-                android:layout_width="0dp"
-                android:layout_weight="0.5"
-                android:text="@string/rooms"
-                android:textSize="24sp" />
+            <TableRow
+                android:id="@+id/confirm_fendona_rooms_sprayed_row"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:background="@android:color/white"
+                android:paddingBottom="8dp"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
+                android:paddingTop="8dp" >
 
-            <View
-                android:layout_height="0dp"
-                android:layout_weight="0.1" />
+                <TextView
+                    android:id="@+id/confirm_fendona_rooms_sprayed_label"
+                    android:layout_width="0dp"
+                    android:layout_weight="0.5"
+                    android:text="@string/rooms"
+                    android:textSize="24sp" />
 
-            <TextView
-                android:id="@+id/confirm_fendona_rooms_sprayed_value"
-                android:layout_width="0dp"
-                android:layout_weight="0.4"
-                android:text="@string/emptyValue"
-                android:textSize="24sp" />
-        </TableRow>
+                <View
+                    android:layout_height="0dp"
+                    android:layout_weight="0.1" />
 
-        <TableRow
-            android:id="@+id/confirm_fendona_shelters_sprayed_row"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:background="@android:color/white"
-            android:paddingBottom="8dp"
-            android:paddingLeft="16dp"
-            android:paddingRight="16dp"
-            android:paddingTop="8dp" >
+                <TextView
+                    android:id="@+id/confirm_fendona_rooms_sprayed_value"
+                    android:layout_width="0dp"
+                    android:layout_weight="0.4"
+                    android:text="@string/emptyValue"
+                    android:textSize="24sp" />
+            </TableRow>
 
-            <TextView
-                android:id="@+id/confirm_fendona_shelters_sprayed_label"
-                android:layout_width="0dp"
-                android:layout_weight="0.5"
-                android:text="@string/shelters"
-                android:textSize="24sp" />
+            <TableRow
+                android:id="@+id/confirm_fendona_shelters_sprayed_row"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:background="@android:color/white"
+                android:paddingBottom="8dp"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
+                android:paddingTop="8dp" >
 
-            <View
-                android:layout_height="0dp"
-                android:layout_weight="0.1" />
+                <TextView
+                    android:id="@+id/confirm_fendona_shelters_sprayed_label"
+                    android:layout_width="0dp"
+                    android:layout_weight="0.5"
+                    android:text="@string/shelters"
+                    android:textSize="24sp" />
 
-            <TextView
-                android:id="@+id/confirm_fendona_shelters_sprayed_value"
-                android:layout_width="0dp"
-                android:layout_weight="0.4"
-                android:text="@string/emptyValue"
-                android:textSize="24sp" />
-        </TableRow>
+                <View
+                    android:layout_height="0dp"
+                    android:layout_weight="0.1" />
 
-        <TableRow
-            android:id="@+id/confirm_fendona_can_refilled_row"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:background="@android:color/white"
-            android:paddingBottom="8dp"
-            android:paddingLeft="16dp"
-            android:paddingRight="16dp"
-            android:paddingTop="8dp" >
+                <TextView
+                    android:id="@+id/confirm_fendona_shelters_sprayed_value"
+                    android:layout_width="0dp"
+                    android:layout_weight="0.4"
+                    android:text="@string/emptyValue"
+                    android:textSize="24sp" />
+            </TableRow>
 
-            <TextView
-                android:id="@+id/confirm_fendona_can_refilled_label"
-                android:layout_width="0dp"
-                android:layout_weight="0.5"
-                android:text="@string/refillCan"
-                android:textSize="24sp" />
+            <TableRow
+                android:id="@+id/confirm_fendona_can_refilled_row"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:background="@android:color/white"
+                android:paddingBottom="8dp"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
+                android:paddingTop="8dp" >
 
-            <View
-                android:layout_height="0dp"
-                android:layout_weight="0.1" />
+                <TextView
+                    android:id="@+id/confirm_fendona_can_refilled_label"
+                    android:layout_width="0dp"
+                    android:layout_weight="0.5"
+                    android:text="@string/refillCan"
+                    android:textSize="24sp" />
 
-            <TextView
-                android:id="@+id/confirm_fendona_can_refilled_value"
-                android:layout_width="0dp"
-                android:layout_weight="0.4"
-                android:text="@string/emptyValue"
-                android:textSize="24sp" />
-        </TableRow>
-    </TableLayout>
+                <View
+                    android:layout_height="0dp"
+                    android:layout_weight="0.1" />
+
+                <TextView
+                    android:id="@+id/confirm_fendona_can_refilled_value"
+                    android:layout_width="0dp"
+                    android:layout_weight="0.4"
+                    android:text="@string/emptyValue"
+                    android:textSize="24sp" />
+            </TableRow>
+        </TableLayout>
+    </ScrollView>
 
     <LinearLayout
         android:id="@+id/confirm_fendona_layout_innerLinearLayout"
