--- a/mSprayApp/res/layout/unsprayed.xml
+++ b/mSprayApp/res/layout/unsprayed.xml
@@ -19,127 +19,135 @@
         android:text="@string/confirmUnsprayed"
         android:textSize="28sp" />
 
-    <LinearLayout
-        android:id="@+id/unsprayed_layout_mainLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+    <ScrollView
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_above="@+id/unsprayed_layout_innerLinearLayout"
         android:layout_below="@+id/unsprayed_textview_title"
         android:layout_marginTop="16dp"
-        android:orientation="vertical" >
+        android:orientation="vertical"
+        android:scrollbars="none" >
 
         <LinearLayout
+            android:id="@+id/unsprayed_layout_mainLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            android:orientation="horizontal"
-            android:padding="12dp" >
+            android:orientation="vertical" >
 
-            <TextView
-                android:id="@+id/unsprayed_textview_roomsUnsprayed"
-                android:layout_width="0dp"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.5"
-                android:text="@string/rooms"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:textColor="#fff"
-                android:textSize="24sp" />
+                android:layout_marginBottom="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:orientation="horizontal"
+                android:padding="12dp" >
 
-            <EditText
-                android:id="@+id/unsprayed_edittext_roomsUnsprayedValue"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="6dp"
-                android:layout_weight="0.5"
-                android:ems="10"
-                android:inputType="number"
-                android:textSize="24sp" >
-            </EditText>
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            android:orientation="horizontal"
-            android:padding="12dp" >
-
-            <TextView
-                android:id="@+id/unsprayed_textview_sheltersUnsprayed"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.5"
-                android:text="@string/shelters"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:textColor="#fff"
-                android:textSize="24sp" />
-
-            <EditText
-                android:id="@+id/unsprayed_edittext_sheltersUnsprayedValue"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.5"
-                android:ems="10"
-                android:inputType="number"
-                android:textSize="24sp" >
-            </EditText>
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            android:orientation="horizontal"
-            android:padding="12dp" >
-
-            <TextView
-                android:id="@+id/unsprayed_textview_reason"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.5"
-                android:text="@string/unsprayedReason"
-                android:textColor="#fff"
-                android:textSize="24sp" />
-
-            <RadioGroup
-                android:id="@+id/unsprayed_radiogroup"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="6dp"
-                android:layout_weight="0.5"
-                android:orientation="vertical" >
-
-                <RadioButton
-                    android:id="@+id/unsprayed_radiobutton_open"
-                    android:layout_width="wrap_content"
+                <TextView
+                    android:id="@+id/unsprayed_textview_roomsUnsprayed"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:checked="true"
-                    android:text="@string/open"
-                    android:textColor="#fff" />
+                    android:layout_weight="0.5"
+                    android:text="@string/rooms"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:textColor="#fff"
+                    android:textSize="24sp" />
 
-                <RadioButton
-                    android:id="@+id/unsprayed_radiobutton_locked"
-                    android:layout_width="wrap_content"
+                <EditText
+                    android:id="@+id/unsprayed_edittext_roomsUnsprayedValue"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:checked="false"
-                    android:text="@string/locked"
-                    android:textColor="#fff" />
+                    android:layout_marginLeft="6dp"
+                    android:layout_weight="0.5"
+                    android:ems="10"
+                    android:inputType="number"
+                    android:textSize="24sp" >
+                </EditText>
+            </LinearLayout>
 
-                <RadioButton
-                    android:id="@+id/unsprayed_radiobutton_refused"
-                    android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:orientation="horizontal"
+                android:padding="12dp" >
+
+                <TextView
+                    android:id="@+id/unsprayed_textview_sheltersUnsprayed"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:checked="false"
-                    android:text="@string/refused"
-                    android:textColor="#fff" />
-            </RadioGroup>
+                    android:layout_weight="0.5"
+                    android:text="@string/shelters"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:textColor="#fff"
+                    android:textSize="24sp" />
+
+                <EditText
+                    android:id="@+id/unsprayed_edittext_sheltersUnsprayedValue"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.5"
+                    android:ems="10"
+                    android:inputType="number"
+                    android:textSize="24sp" >
+                </EditText>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:orientation="horizontal"
+                android:padding="12dp" >
+
+                <TextView
+                    android:id="@+id/unsprayed_textview_reason"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.5"
+                    android:text="@string/unsprayedReason"
+                    android:textColor="#fff"
+                    android:textSize="24sp" />
+
+                <RadioGroup
+                    android:id="@+id/unsprayed_radiogroup"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="6dp"
+                    android:layout_weight="0.5"
+                    android:orientation="vertical" >
+
+                    <RadioButton
+                        android:id="@+id/unsprayed_radiobutton_open"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:checked="true"
+                        android:text="@string/open"
+                        android:textColor="#fff" />
+
+                    <RadioButton
+                        android:id="@+id/unsprayed_radiobutton_locked"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:checked="false"
+                        android:text="@string/locked"
+                        android:textColor="#fff" />
+
+                    <RadioButton
+                        android:id="@+id/unsprayed_radiobutton_refused"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:checked="false"
+                        android:text="@string/refused"
+                        android:textColor="#fff" />
+                </RadioGroup>
+            </LinearLayout>
         </LinearLayout>
-    </LinearLayout>
+    </ScrollView>
 
     <LinearLayout
         android:id="@+id/unsprayed_layout_innerLinearLayout"
