--- a/mSprayApp/res/layout/confirm_unsprayed.xml
+++ b/mSprayApp/res/layout/confirm_unsprayed.xml
@@ -17,129 +17,134 @@
         android:text="@string/confirmNoSpray"
         android:textSize="28sp" />
 
-    <TableLayout
-        android:id="@+id/confirm_unsprayed_table"
+    <ScrollView
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="fill_parent"
+        android:layout_above="@+id/confirm_unsprayed_layout_innerLinearLayout"
         android:layout_below="@+id/confirm_unsprayed_textview_title"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginTop="16dp" >
+        android:layout_marginTop="16dp"
+        android:orientation="vertical"
+        android:scrollbars="none" >
 
-        <TableRow
-            android:id="@+id/confirm_unsprayed_rooms_unsprayed_row"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:background="@android:color/white"
-            android:paddingBottom="8dp"
-            android:paddingLeft="16dp"
-            android:paddingRight="16dp"
-            android:paddingTop="8dp" >
+        <TableLayout
+            android:id="@+id/confirm_unsprayed_table"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content" >
 
-            <TextView
-                android:id="@+id/confirm_unsprayed_rooms_unsprayed_label"
-                android:layout_width="0dp"
-                android:layout_weight="0.8"
-                android:text="@string/roomsUnsprayedLabel"
-                android:textSize="24sp" />
+            <TableRow
+                android:id="@+id/confirm_unsprayed_rooms_unsprayed_row"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:background="@android:color/white"
+                android:paddingBottom="8dp"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
+                android:paddingTop="8dp" >
 
-            <TextView
-                android:id="@+id/confirm_unsprayed_rooms_unsprayed_value"
-                android:layout_width="0dp"
-                android:layout_weight="0.2"
-                android:gravity="right"
-                android:text=""
-                android:textSize="24sp" />
+                <TextView
+                    android:id="@+id/confirm_unsprayed_rooms_unsprayed_label"
+                    android:layout_width="0dp"
+                    android:layout_weight="0.8"
+                    android:text="@string/roomsUnsprayedLabel"
+                    android:textSize="24sp" />
 
-        </TableRow>
+                <TextView
+                    android:id="@+id/confirm_unsprayed_rooms_unsprayed_value"
+                    android:layout_width="0dp"
+                    android:layout_weight="0.2"
+                    android:gravity="right"
+                    android:text=""
+                    android:textSize="24sp" />
+            </TableRow>
 
-        <TableRow
-            android:id="@+id/confirm_unsprayed_shelters_unsprayed_row"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:background="@android:color/white"
-            android:paddingBottom="8dp"
-            android:paddingLeft="16dp"
-            android:paddingRight="16dp"
-            android:paddingTop="8dp" >
+            <TableRow
+                android:id="@+id/confirm_unsprayed_shelters_unsprayed_row"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:background="@android:color/white"
+                android:paddingBottom="8dp"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
+                android:paddingTop="8dp" >
 
-            <TextView
-                android:id="@+id/confirm_unsprayed_shelters_unsprayed_label"
-                android:layout_width="0dp"
-                android:layout_weight="0.8"
-                android:text="@string/sheltersUnsprayedLabel"
-                android:textSize="24sp" />
+                <TextView
+                    android:id="@+id/confirm_unsprayed_shelters_unsprayed_label"
+                    android:layout_width="0dp"
+                    android:layout_weight="0.8"
+                    android:text="@string/sheltersUnsprayedLabel"
+                    android:textSize="24sp" />
 
-            <TextView
-                android:id="@+id/confirm_unsprayed_shelters_unsprayed_value"
-                android:layout_width="0dp"
-                android:layout_weight="0.2"
-                android:gravity="right"
-                android:text=""
-                android:textSize="24sp" />
+                <TextView
+                    android:id="@+id/confirm_unsprayed_shelters_unsprayed_value"
+                    android:layout_width="0dp"
+                    android:layout_weight="0.2"
+                    android:gravity="right"
+                    android:text=""
+                    android:textSize="24sp" />
+            </TableRow>
 
-        </TableRow>
+            <TableRow
+                android:id="@+id/confirm_unsprayed_reason_row"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:background="@android:color/white"
+                android:paddingBottom="8dp"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
+                android:paddingTop="8dp" >
+
+                <TextView
+                    android:id="@+id/confirm_unsprayed_reason_label"
+                    android:layout_width="0dp"
+                    android:layout_weight="0.5"
+                    android:text="@string/unsprayedReason"
+                    android:textSize="24sp" />
+
+                <TextView
+                    android:id="@+id/confirm_unsprayed_reason_value"
+                    android:layout_width="0dp"
+                    android:layout_weight="0.2"
+                    android:gravity="right"
+                    android:text=""
+                    android:textSize="24sp" />
+            </TableRow>
+        </TableLayout>
+    </ScrollView>
         
-        <TableRow
-            android:id="@+id/confirm_unsprayed_reason_row"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:id="@+id/confirm_unsprayed_layout_innerLinearLayout"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:background="@android:color/white"
-            android:paddingBottom="8dp"
-            android:paddingLeft="16dp"
-            android:paddingRight="16dp"
-            android:paddingTop="8dp" >
+            android:layout_alignParentBottom="true"
+            android:background="@drawable/darkgray"
+            android:padding="9dp" >
 
-            <TextView
-                android:id="@+id/confirm_unsprayed_reason_label"
+            <Button
+                android:id="@+id/confirm_unsprayed_button_backButton"
                 android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="3dp"
                 android:layout_weight="0.5"
-                android:text="@string/unsprayedReason"
-                android:textSize="24sp" />
+                android:background="@drawable/button_selector_red"
+                android:text="@string/back"
+                android:textColor="#fff"
+                android:textSize="28sp" />
 
-            <TextView
-                android:id="@+id/confirm_unsprayed_reason_value"
-                android:layout_width="0dp"
-                android:layout_weight="0.2"
-                android:gravity="right"
-                android:text=""
-                android:textSize="24sp" />
-
-        </TableRow>
-    </TableLayout>
-
-    <LinearLayout
-        android:id="@+id/confirm_unsprayed_layout_innerLinearLayout"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:background="@drawable/darkgray"
-        android:padding="9dp" >
-
-        <Button
-            android:id="@+id/confirm_unsprayed_button_backButton"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="3dp"
-            android:layout_weight="0.5"
-            android:background="@drawable/button_selector_red"
-            android:text="@string/back"
-            android:textColor="#fff"
-            android:textSize="28sp" />
-
-        <Button
-            android:id="@+id/confirm_unsprayed_button_confirmButton"
-            android:layout_width="0px"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="3dp"
-            android:layout_weight="0.5"
-            android:background="@drawable/button_selector_green"
-            android:text="@string/confirm"
-            android:textColor="#fff"
-            android:textSize="28sp" />
-    </LinearLayout>
+            <Button
+                android:id="@+id/confirm_unsprayed_button_confirmButton"
+                android:layout_width="0px"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="3dp"
+                android:layout_weight="0.5"
+                android:background="@drawable/button_selector_green"
+                android:text="@string/confirm"
+                android:textColor="#fff"
+                android:textSize="28sp" />
+        </LinearLayout>
 
 </RelativeLayout>
