--- a/mSprayApp/res/layout/gps_location.xml
+++ b/mSprayApp/res/layout/gps_location.xml
@@ -5,36 +5,43 @@
     android:background="@drawable/darkgray"
     android:screenOrientation="portrait" >
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="fill_parent"
-        android:layout_height="match_parent"
+        android:layout_height="fill_parent"
         android:layout_above="@+id/gps_location_layout_innerLinearLayout"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginTop="8dp"
         android:background="@android:color/white"
-        android:gravity="center"
         android:orientation="vertical"
         android:paddingBottom="16dp"
-        android:paddingTop="16dp" >
+        android:paddingTop="16dp"
+        android:scrollbars="none" >
 
-        <ImageView
-            android:id="@+id/gps_location_image"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:contentDescription="@string/gps_image"
             android:gravity="center"
-            android:src="@drawable/gpssignal" />
+            android:orientation="vertical" >
 
-        <TextView
-            android:id="@+id/gps_location_textview_contents"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
-            android:gravity="center"
-            android:text="@string/location_found"
-            android:textSize="30sp" />
-    </LinearLayout>
+            <ImageView
+                android:id="@+id/gps_location_image"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:contentDescription="@string/gps_image"
+                android:gravity="center"
+                android:src="@drawable/gpssignal" />
+
+            <TextView
+                android:id="@+id/gps_location_textview_contents"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="12dp"
+                android:gravity="center"
+                android:text="@string/location_found"
+                android:textSize="30sp" />
+        </LinearLayout>
+    </ScrollView>
 
     <LinearLayout
         android:id="@+id/gps_location_layout_innerLinearLayout"
